# MedSeg-Explainable-Equitable-Medical-Segmentation-Pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  improved.yaml  synthetic_demo.yaml
deploy/: DEPLOY.md  MODEL_README.md  README.md  app.py  deploy_hf.py  requirements.txt
docs/: DATASHEET.md  ETHICS_IEEE.md  MODEL_CARD.md  REGULATORY.md  RESULTS.md
medseg/: __init__.py  config.py  evaluate.py  losses.py  metrics.py  quantify.py  train.py  utils.py
medseg/app/: __init__.py  gradio_app.py
medseg/data/: __init__.py  dataset.py  pannuke.py  synthetic.py
medseg/explain/: __init__.py  seg_gradcam.py  uncertainty.py
medseg/fairness/: __init__.py  audit.py
medseg/models/: __init__.py  unet.py
medseg/monitoring/: __init__.py  drift.py  monitor.py
scripts/: download_data.py  make_report.sh  qualitative_examples.py
tests/: test_smoke.py
