[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medseg"
version = "0.1.0"
description = "Responsible semantic segmentation of histopathology images: multi-class tissue/nuclei segmentation with explainability, fairness auditing, and performance monitoring."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["medical-imaging", "semantic-segmentation", "histopathology", "responsible-ai", "fairness", "explainability"]

dependencies = [
  "torch>=2.4",
  "numpy>=1.26",
  "scikit-image>=0.22",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "pandas>=2.1",
  "pillow>=10.0",
]

[project.optional-dependencies]
full = [
  "torchvision>=0.19",
  "segmentation-models-pytorch>=0.3.4",
  "albumentations>=1.4",
  "huggingface_hub>=0.24",
  "datasets>=2.14",
  "gradio>=4.0",
]

[project.scripts]
medseg-train = "medseg.train:main"
medseg-eval = "medseg.evaluate:main"

[tool.setuptools.packages.find]
include = ["medseg*"]
